--- a/style.css
+++ b/style.css
@@ -20,33 +20,6 @@ body{
   top: 6.4rem;
   right: 6.4rem;
 }
-
-.darkmode{
-  background: #121214;
-}
-.darkmode .timer{
-  color: white;
-}
-.darkmode .buttons_timer svg path{
-  fill: #C4C4CC;
-}
-.darkmode .themes svg path:nth-child(1){
-  fill: #29292E;
-}
-.darkmode .themes svg path:nth-child(2){
-  fill: #C4C4CC;
-}
-.darkmode .themeButton_Pressed svg path:nth-child(1){
-  fill: #0A3442;
-}
-.darkmode .themeButton_Pressed svg path:nth-child(2){
-  fill: white;
-}
-
-.lightmode{
-  background: white;
-}
-
 .page{
   display: grid;
   grid-template-areas: "1 1" "2 2";
@@ -86,15 +59,43 @@ button{
 
 #florest{
   grid-area: A;
+  position: relative;
 }
 #rain{
   grid-area: B;
+  position: relative;
 }
 #coffee_shop{
   grid-area: C;
+  position: relative;
 }
 #fireplace{
   grid-area: D;
+  position: relative;
+}
+
+input{
+  width: 9rem;
+
+  position: absolute;
+  bottom: 2.6rem;
+  left: 2.4rem;
+}
+
+input[type="range"]{
+  appearance: none;
+  background: black;
+  height: 4px;
+  border-radius: 5px;
+}
+input::-webkit-slider-thumb{
+  appearance: none;
+  background: black;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 20rem;
+
+  cursor: pointer;
 }
 
 button:hover{
@@ -108,6 +109,42 @@ button:hover{
 .themeButton_Pressed svg path:nth-child(2){
   fill: var(--bt_themes_pressed);
 }
+.themeButton_Pressed input[type="range"]{
+  background: white;
+}
+.themeButton_Pressed input::-webkit-slider-thumb{
+  background: white;
+}
+
+.darkmode{
+  background: #121214;
+}
+.darkmode .timer{
+  color: white;
+}
+.darkmode .buttons_timer svg path{
+  fill: #C4C4CC;
+}
+.darkmode .themes svg path:nth-child(1){
+  fill: #29292E;
+}
+.darkmode .themes svg path:nth-child(2){
+  fill: #C4C4CC;
+}
+.darkmode .themeButton_Pressed svg path:nth-child(1){
+  fill: #0A3442;
+}
+.darkmode .themeButton_Pressed svg path:nth-child(2){
+  fill: white;
+}
+.darkmode input[type="range"]{
+  background: white;
+}
+.darkmode input::-webkit-slider-thumb{
+  background: white;
+}
+
+
 
 .hide{
 display: none;
